k8s/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: jenkins-service
  namespace: jenkins-team2
spec:
  selector:
    app: jenkins
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
