k8s/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: petclinic-service
  namespace: petclinic-team2
spec:  
  selector:
    app: petclinic
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
